      AI implemented (yet)
    - Pieces of any non-moving players can be hidden from the main view
      through a menu option. This option can be used to get a bigger board
      while maintaining the window size
    - Fixed error transferring starting coords settings from the "new 
      total allocation game dialog" to the actual game engine
    - Stripped out debug information when compiling without all the DEBUG
      flags. Binary size has been decreased to less than 10% of the original
      size under GNU/Linux

29/10/2010: Version 0.3.1
    - Added support for non-square shaped boards (they can be used now in total
      deployment games)
    - Challenge game mode added to the GUI. A blockem challenge is a special 
      kind of game that consists in a customised board where a player must 
      allocate a set of pieces (might be all of them or just a subset of all 
      the available pieces). There is no opponent, so the human user will be 
      playing against the challenge's designer. Have a read to the README file
      of this project (also to the file challenges/README)
    - Fixed bug in GUI. If a new total deployment game was launched while the
      computer was calculating a move for the 1 vs 1 game the mouse cursor 
      never came back to the default arrow (it kept showing the busy icon)
    - Fixed bug in GUI. Latest deployed piece glowing effect didn't work when
      two types of game where played before restarting the application. This 
      was due to the way g_timeout_add works
    - Whenever a game is cancelled its corresponding GLib timers are stopped so
      they don't keep counting forever

16/10/2010: Version 0.3.0
    - Major refactoring on GUI handling. New games can be added easier into 
      the Main Window. New Game dialog redesigned too.
    - Total allocation mode available on GUI. Player is requested to put down 
      all his/her pieces on a custom-size board playing against no opponent